WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80401
[BlackBerry] Credential save and autofill implemetation
https://bugs.webkit.org/show_bug.cgi?id=80401
Summary
[BlackBerry] Credential save and autofill implemetation
Jonathan Dong
Reported
2012-03-06 02:09:50 PST
Implement credential autofill feature for blackberry porting. Including http authentication dialog save and autofill, as well as in-form authentication save and autofill.
Attachments
Patch
(11.51 KB, patch)
2012-03-06 02:44 PST
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Patch
(19.25 KB, patch)
2012-03-15 19:35 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Patch
(19.14 KB, patch)
2012-03-20 19:19 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Patch
(19.41 KB, patch)
2012-03-20 20:43 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Patch
(19.34 KB, patch)
2012-03-21 06:59 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Dong
Comment 1
2012-03-06 02:44:31 PST
Created
attachment 130343
[details]
Patch
Antonio Gomes
Comment 2
2012-03-10 17:06:27 PST
Comment on
attachment 130343
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=130343&action=review
I will like we are missing an abstraction layer here :( ... the layering violation and the 'friend' class declaration makes me kinda of sad.
> Source/WebCore/platform/network/blackberry/NetworkJob.cpp:841 > + Credential inputCredential = static_cast<FrameLoaderClientBlackBerry*>(m_frame->loader()->client())->authenticationChallenge(newURL, protectionSpace);
That is a layering violation.
Jonathan Dong
Comment 3
2012-03-15 19:35:27 PDT
Created
attachment 132177
[details]
Patch
Rob Buis
Comment 4
2012-03-20 11:25:28 PDT
Comment on
attachment 132177
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132177&action=review
Looks good, see if you can fix before landing, and Leo or Charles can help cq+ or commit for you.
> Source/WebKit/blackberry/Api/WebPage.cpp:2024 > + WebCore::Credential inputCredential(username, password, WebCore::CredentialPersistenceNone);
You dont need WebCore:: prefix in this file.
> Source/WebKit/blackberry/Api/WebPage_p.h:180 > + virtual PageClientBlackBerry::SaveCredentialType notifyShouldSaveCredential(bool);
PageClientBlackBerry:: prefix might be not needed.
Jonathan Dong
Comment 5
2012-03-20 19:19:52 PDT
Created
attachment 132948
[details]
Patch
Rob Buis
Comment 6
2012-03-20 19:24:35 PDT
Comment on
attachment 132948
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132948&action=review
Looks good.
> Source/WebCore/ChangeLog:6 > + Reviewed by Rob Buis.
You probably mean internally reviewed here. Since I am doing both the internal and external review this is fine, but better keep it blank (i.e. NOBODY).
Charles Wei
Comment 7
2012-03-20 19:27:35 PDT
Comment on
attachment 132948
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132948&action=review
> Source/WebCore/ChangeLog:10 > + As this class is our platform independent interface,
should be "platform specific interface".
> Source/WebCore/ChangeLog:12 > + FrameLoaderClient cause which might be intrusion.
"cause which might be intrusion" ==>which is a platform independent interface.
Leo Yang
Comment 8
2012-03-20 19:29:20 PDT
You also need to address
comment #4
Rob Buis
Comment 9
2012-03-20 19:34:13 PDT
(In reply to
comment #8
)
> You also need to address
comment #4
Ah, good catch... Cheers, Rob.
Jonathan Dong
Comment 10
2012-03-20 20:43:50 PDT
Created
attachment 132956
[details]
Patch Sorry for the carelessness and thanks for the help
Rob Buis
Comment 11
2012-03-21 04:26:09 PDT
Comment on
attachment 132956
[details]
Patch Looks good.
WebKit Review Bot
Comment 12
2012-03-21 04:27:51 PDT
Comment on
attachment 132956
[details]
Patch Rejecting
attachment 132956
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12035387
Rob Buis
Comment 13
2012-03-21 04:31:24 PDT
Comment on
attachment 132956
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132956&action=review
> Source/WebCore/ChangeLog:6 > + Reviewed by NOBODY (OPPS!).
Typo!
> Source/WebKit/blackberry/ChangeLog:6 > + Reviewed by NOBODY (OPPS!).
Ditto.
Jonathan Dong
Comment 14
2012-03-21 06:59:43 PDT
Created
attachment 133036
[details]
Patch
Rob Buis
Comment 15
2012-03-21 08:15:56 PDT
Comment on
attachment 133036
[details]
Patch Lets retry.
WebKit Review Bot
Comment 16
2012-03-21 08:23:50 PDT
Comment on
attachment 133036
[details]
Patch Clearing flags on attachment: 133036 Committed
r111546
: <
http://trac.webkit.org/changeset/111546
>
WebKit Review Bot
Comment 17
2012-03-21 08:23:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug