Source/WebCore/platform/blackberry/PageClientBlackBerry.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009, 2010, 2011 Research In Motion Limited. All rights reserved.
+ * Copyright (C) 2009, 2010, 2011, 2012 Research In Motion Limited. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -19,6 +19,7 @@
 #ifndef PageClientBlackBerry_h
 #define PageClientBlackBerry_h
 
+#include "Credential.h"
 #include "Cursor.h"
 #include "WebPageClient.h"
 
@@ -34,11 +35,19 @@ namespace BlackBerry {
 namespace WebCore {
     class IntRect;
     class IntSize;
+    class KURL;
     class PluginView;
+    class ProtectionSpace;
 }
 
 class PageClientBlackBerry {
 public:
+    enum SaveCredentialType {
+        SaveCredentialNeverForThisSite = 0,
+        SaveCredentialNotNow,
+        SaveCredentialYes
+    };
+
     virtual void setCursor(WebCore::PlatformCursor) = 0;
     virtual BlackBerry::Platform::NetworkStreamFactory* networkStreamFactory() = 0;
     virtual BlackBerry::Platform::Graphics::Window* platformWindow() const = 0;
@@ -60,6 +69,8 @@ public:
     virtual WebCore::IntSize viewportSize() const = 0;
     virtual int showAlertDialog(BlackBerry::WebKit::WebPageClient::AlertType) = 0;
     virtual bool isActive() const = 0;
+    virtual WebCore::Credential authenticationChallenge(const WebCore::KURL&, const WebCore::ProtectionSpace&) = 0;
+    virtual SaveCredentialType notifyShouldSaveCredential(bool) = 0;
 };
 
 #endif // PageClientBlackBerry_h
