Source/WebKit/blackberry/WebCoreSupport/CredentialManager.cpp
@@ -23,23 +23,22 @@
 
 #include "CredentialBackingStore.h"
 #include "CredentialTransformData.h"
-#include "FrameLoaderClientBlackBerry.h"
 #include "HTMLFormElement.h"
 #include "KURL.h"
 #include "Logging.h"
-#include "WebPageClient.h"
-#include "WebPage_p.h"
+#include "PageClientBlackBerry.h"
 #include "WebString.h"
 
-using BlackBerry::WebKit::WebPageClient;
 using BlackBerry::WebKit::WebString;
 
 namespace WebCore {
 
-CredentialManager::CredentialManager(FrameLoaderClientBlackBerry* frameLoaderClient)
-    : m_frameLoaderClient(frameLoaderClient)
+CredentialManager& credentialManager()
 {
-    ASSERT(m_frameLoaderClient);
+    static CredentialManager *credentialManager = 0;
+    if (!credentialManager)
+        credentialManager = new CredentialManager();
+    return *credentialManager;
 }
 
 void CredentialManager::autofillAuthenticationChallenge(const ProtectionSpace& protectionSpace, WebString& username, WebString& password)
@@ -70,8 +69,10 @@ void CredentialManager::autofillPasswordForms(PassRefPtr<HTMLCollection> docForm
     }
 }
 
-void CredentialManager::saveCredentialIfConfirmed(const CredentialTransformData& data)
+void CredentialManager::saveCredentialIfConfirmed(PageClientBlackBerry* pageClient, const CredentialTransformData& data)
 {
+    ASSERT(pageClient);
+
     if (!data.isValid() || data.credential().isEmpty() || CredentialBackingStore::instance()->hasNeverRemember(data.protectionSpace()))
         return;
 
@@ -79,13 +80,13 @@ void CredentialManager::saveCredentialIfConfirmed(const CredentialTransformData&
     if (savedCredential == data.credential())
         return;
 
-    WebPageClient::SaveCredentialType type = m_frameLoaderClient->m_webPagePrivate->m_client->notifyShouldSaveCredential(savedCredential.isEmpty());
-    if (type == WebPageClient::SaveCredentialYes) {
+    PageClientBlackBerry::SaveCredentialType type = pageClient->notifyShouldSaveCredential(savedCredential.isEmpty());
+    if (type == PageClientBlackBerry::SaveCredentialYes) {
         if (savedCredential.isEmpty())
             CredentialBackingStore::instance()->addLogin(data.url(), data.protectionSpace(), data.credential());
         else
             CredentialBackingStore::instance()->updateLogin(data.url(), data.protectionSpace(), data.credential());
-    } else if (type == WebPageClient::SaveCredentialNeverForThisSite) {
+    } else if (type == PageClientBlackBerry::SaveCredentialNeverForThisSite) {
         CredentialBackingStore::instance()->addNeverRemember(data.url(), data.protectionSpace());
         CredentialBackingStore::instance()->removeLogin(data.url(), data.protectionSpace());
     }
